New label and download button

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -43,39 +43,39 @@
     <div class="owl-carousel-collections owl-carousel owl-theme">
       <div class="item">
         <img class="collection-img" src="assets/dspace/images/collection_badge.png" />
-        <a href="/search?scope={UUID}&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Genetic Resources</h5></a>
+        <a href="/ui-pub/search?scope=fa8aeb8c-224e-427b-a57a-067eaadebc3b&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Genetic Resources</h5></a>
       </div>
       <div class="item">
         <img class="collection-img" src="assets/dspace/images/collection_badge.png" />
-        <a href="/search?scope={UUID}&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Institutional</h5></a>
+        <a href="/ui-pub/search?scope=f7a73a1c-4008-4ca3-a745-5427eff06486&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Institutional</h5></a>
       </div>
       <div class="item">
         <img class="collection-img" src="assets/dspace/images/collection_badge.png" />
-        <a href="/search?scope={UUID}&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Maize</h5></a>
+        <a href="/ui-pub/search?scope=2ad40488-b8ec-4d29-a78e-d902690c777b&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Maize</h5></a>
       </div>
       <div class="item">
         <img class="collection-img" src="assets/dspace/images/collection_badge.png" />
-        <a href="/search?scope={UUID}&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Photography</h5></a>
+        <a href="/ui-pub/search?scope=6e4c5b49-6f8e-4003-b651-2214de939532&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Photography</h5></a>
       </div>
       <div class="item">
         <img class="collection-img" src="assets/dspace/images/collection_badge.png" />
-        <a href="/search?scope={UUID}&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Socioeconomics</h5></a>
+        <a href="/ui-pub/search?scope=767ede47-652e-4574-bc1e-1d25fcaacdff&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Socioeconomics</h5></a>
       </div>
       <div class="item">
         <img class="collection-img" src="assets/dspace/images/collection_badge.png" />
-        <a href="/search?scope={UUID}&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Sustainable Agrifood Systems</h5></a>
+        <a href="/ui-pub/search?scope=71219703-89e2-48b7-95ee-65c121cded8e&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Sustainable Agrifood Systems</h5></a>
       </div>
       <div class="item">
         <img class="collection-img" src="assets/dspace/images/collection_badge.png" />
-        <a href="/search?scope={UUID}&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Sustainable Intensification</h5></a>
+        <a href="/ui-pub/search?scope=fb8e6f30-f6dd-4e96-ae9d-3eab987b4028&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Sustainable Intensification</h5></a>
       </div>
       <div class="item">
         <img class="collection-img" src="assets/dspace/images/collection_badge.png" />
-        <a href="/search?scope={UUID}c&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Video</h5></a>
+        <a href="/ui-pub/search?scope=c01b43a8-6f53-4fd2-b113-8f4a41de4352&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Video</h5></a>
       </div>
       <div class="item">
         <img class="collection-img" src="assets/dspace/images/collection_badge.png" />
-        <a href="/search?scope={UUID}&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Wheat</h5></a>
+        <a href="/ui-pub/search?scope=70ce109d-abcf-4974-a8da-d98d2bedbc56&spc.page=1&spc.sf=dc.date.issued&spc.sd=DESC"><h5 class="collection-name">Wheat</h5></a>
       </div>
     </div>
   </ng-container>
