--- a/src/app/item-page/simple/field-components/file-section/file-section.component.html
+++ b/src/app/item-page/simple/field-components/file-section/file-section.component.html
@@ -1,8 +1,8 @@
 <ng-container *ngVar="(bitstreams$ | async) as bitstreams">
   <ds-metadata-field-wrapper *ngIf="bitstreams?.length > 0" [label]="label | translate">
     <div class="file-section">
-      <ds-themed-file-download-link *ngFor="let file of bitstreams; let last=last;" [bitstream]="file" [item]="item">
-        <span>{{ dsoNameService.getName(file) }}</span>
+      <ds-themed-file-download-link class="btn btn-outline-primary" *ngFor="let file of bitstreams; let last=last;" [bitstream]="file" [item]="item">
+        <span><i class="fa fa-download"> </i>  {{ dsoNameService.getName(file) }}  </span>
         <span> ({{(file?.sizeBytes) | dsFileSize }})</span>
         <span *ngIf="!last" innerHTML="{{separator}}"></span>
       </ds-themed-file-download-link>
