--- a/src/styles/_global-styles.scss
+++ b/src/styles/_global-styles.scss
@@ -265,14 +265,14 @@ ul.dso-edit-menu-dropdown > li .nav-item.nav-link {
 
 ds-themed-file-download-link.btn.btn-outline-primary {
     background-color: #336C6D;
-    margin-bottom: .2rem
+    margin-bottom: .2rem;
     a.dont-break-out {
         color: #fff;
     }
 }
 ds-themed-file-download-link.btn.btn-outline-primary:hover {
     background-color: #279A82;
-    margin-bottom: .2rem
+    margin-bottom: .2rem;
     a.dont-break-out {
         color: #fff;
     }
