--- a/src/app/shared/search/search-filters/search-filter/search-filter.component.scss
+++ b/src/app/shared/search/search-filters/search-filter/search-filter.component.scss
@@ -26,6 +26,7 @@
     background: transparent;
     width: 100%;
     outline: none !important;
+    border-bottom: 1pX solid rgba(119, 189, 66, 0.4);
   }
 
   &.focus {
