--- a/src/app/shared/object-list/my-dspace-result-list-element/item-list-preview/item-list-preview.component.html
+++ b/src/app/shared/object-list/my-dspace-result-list-element/item-list-preview/item-list-preview.component.html
@@ -5,7 +5,7 @@
   </div>
   <div [ngClass]="showThumbnails ? 'col-9' : 'col-md-12'">
     <div *ngIf="item" @fadeInOut>
-      <div class="d-flex">
+      <div class="d-flex justify-content-end">
         <ds-badges [object]="item" [context]="badgeContext" [showAccessStatus]="true"></ds-badges>
       </div>
       <ds-truncatable [id]="item.id">
