--- a/src/styles/_global-styles.scss
+++ b/src/styles/_global-styles.scss
@@ -432,6 +432,7 @@ ul.dso-edit-menu-dropdown>li .nav-item.nav-link {
 
     &.btn-primary:focus, &.btn-outline-primary:focus {
         outline-color: darken($primary, 5%);
+        border: solid 1px #111;
     }
 }
 
