--- a/src/themes/dspace/styles/_global-styles.scss
+++ b/src/themes/dspace/styles/_global-styles.scss
@@ -4,7 +4,7 @@
 @import '../../../styles/_global-styles.scss';
 
 .facet-filter, .setting-option, .advanced-search {
-  background-color: var(--bs-light);
+  background-color: rgba(172, 183, 172, 0.2);
   border-radius: var(--bs-border-radius);
 
   &.p-3 {
@@ -14,10 +14,79 @@
   }
 
   .badge-secondary {
-    background-color: var(--bs-primary);
+    background-color: #326670;
   }
 
   h4, .h4 {
     font-size: 1.1rem
+  }
+}
+
+ds-recent-item-list {
+  .my-4 {
+    border: 1px solid #ddd;
+  }
+  .my-4:hover{
+    box-shadow: 0 0 4px 1px #e1e1e1;
+  }
+
+}
+
+ds-search-results {
+  li.mt-4.mb-4{
+    border: 1px solid #ddd;
+  }
+  li.mt-4.mb-4:hover {
+    box-shadow: 0 0 4px 1px #e1e1e1;
+  }
+}
+
+ds-badges {
+  margin-right: .5pc;
+}
+
+ds-base-thumbnail{
+    img{
+    max-width: 110%;
+    margin-bottom: 1pc;
+  }
+}
+
+h2, .h4{
+  font-weight: bold;
+}
+
+.btn-primary {
+  color: #326670;
+  background-color: #ffffff;
+  border: 1px solid #326670;
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+.btn-primary:hover {
+  color: #ffffff;
+  background-color: #326670;
+  border-color: rgb(229.5, 229.5, 229.5);
+}
+
+
+.btn-secondary {
+  color: #fff;
+  background-color: #326670;
+  border-color: #326670;
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.btn-secondary:hover {
+  color: #326670;
+  background-color: #fff;
+  border-color: #fff;
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+ds-base-lang-switch{
+  .dropdown-item.active, .dropdown-item:active{
+    color: #003B49;
+    text-decoration: none;
+    background-color: #ffffff;
   }
 }
