Fix labels - Add Donormetadata block in item view

--- a/src/app/item-page/simple/item-types/publication/publication.component.html
+++ b/src/app/item-page/simple/item-types/publication/publication.component.html
@@ -225,6 +225,8 @@
       [separator]="'; '">
     </ds-item-page-uri-search-field>
 
+    <ds-item-page-donor [item]="object"></ds-item-page-donor>
+
     <ds-item-page-uri-linktext [item]="object"
       [fields]="['dc.relation.dataset']"
       [label]="'item.page.uridataset'"
