--- a/src/themes/dspace/styles/_global-styles.scss
+++ b/src/themes/dspace/styles/_global-styles.scss
@@ -343,7 +343,7 @@ ds-item-page-uri-linktext, ds-item-page-collections{
   }
 }
 
-ds-item-page-cgiar{
+ds-item-page-cgiar, ds-item-page-donor{
   .item-page-field.cgiar-initiative{
     margin-top: 5rem;
   }
