--- a/src/app/item-page/simple/field-components/specific-field/cgiar/item-page-cgiar.component.html
+++ b/src/app/item-page/simple/field-components/specific-field/cgiar/item-page-cgiar.component.html
@@ -12,12 +12,12 @@
       [fields]="['dc.relation.actionArea']"
       [label]="'dc.relation.actionArea'">
     </ds-generic-item-page-field>
-    <ds-generic-item-page-field [item]="item"
-      [fields]="['dc.relation.funderName']"
-      [label]="'dc.relation.funderName'">
-    </ds-generic-item-page-field>
     <ds-item-page-uri-field [item]="item"
       [fields]="['dc.relation.cgspaceuri']"
       [label]="'dc.relation.cgspaceuri'">
     </ds-item-page-uri-field>
+    <ds-generic-item-page-field [item]="item"
+      [fields]="['dc.relation.programAccelerator']"
+      [label]="'dc.relation.programAccelerator'">
+    </ds-generic-item-page-field>
   </div>
