--- a/src/app/home-page/recent-item-list/recent-item-list.component.html
+++ b/src/app/home-page/recent-item-list/recent-item-list.component.html
@@ -7,7 +7,7 @@
                         </ds-listable-object-component-loader>
                 </div>
                 <!-- <button (click)="onLoadMore()" class="btn btn-primary search-button mt-4 float-left ng-tns-c290-40"> {{'vocabulary-treeview.load-more' | translate }} ...</button> -->
-                <a class="btn btn-primary search-button mt-4 float-left ng-tns-c290-40"  [href]="'/ui-pub/search?spc.page=1&spc.sf=dc.date.available&spc.sd=DESC&f.entityType=Publication,equals'">
+                <a class="btn btn-primary search-button mt-4 float-left ng-tns-c290-40"  [href]="'/search?spc.page=1&spc.sf=dc.date.available&spc.sd=DESC&f.entityType=Publication,equals'">
                         {{'vocabulary-treeview.load-more' | translate }} ...
                 </a> 
         </div>
