--- a/src/app/home-page/top-level-community-list/top-level-community-list.component.html
+++ b/src/app/home-page/top-level-community-list/top-level-community-list.component.html
@@ -12,7 +12,7 @@
     [hideGear]="true">
   </ds-viewable-collection>
   -->
-	<p-carousel [value]="communitiesRD?.payload?.page" [numVisible]="3" [numScroll]="3" [circular]="true" [responsiveOptions]="responsiveOptions" autoplayInterval="3000" [showIndicators]="false" >
+	<p-carousel [value]="communitiesRD?.payload?.page" [numVisible]="3" [numScroll]="3" [circular]="true" [responsiveOptions]="responsiveOptions" autoplayInterval="3000" >
 		<ng-template pTemplate="item" let-community>
 			<a href="communities/{{ community.id }}" class="flex flex-col items-center">
 				<div class="flex flex-col items-center justify-center border border-surface rounded-border m-2 p-4 text-center">
