--- a/src/styles/_custom_variables.scss
+++ b/src/styles/_custom_variables.scss
@@ -103,8 +103,8 @@
   --ds-home-news-link-hover-color: #{darken($ds-home-news-link-color, 15%)};
   --ds-home-news-background-color: #{$gray-200};
 
-  --ds-breadcrumb-bg: #{$gray-200} !important;
-  --ds-breadcrumb-link-color: #{$ds-breadcrumb-link-color};
+  --ds-breadcrumb-bg: #E7F1D8 !important;
+  --ds-breadcrumb-link-color: #2B6933;
   --ds-breadcrumb-link-active-color: #{darken($ds-breadcrumb-link-color, 30%)};
   --ds-breadcrumb-max-length: 200px;
 
