Fix styles add download button

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
           <a href="https://www.cimmyt.org/">
-            <img src="../../assets/images/Horizontal-CIMMYT_logo_white.svg" alt="">
+            <img src="assets/images/CIMMYT_horizontal_logo.svg" alt="">
           </a>
         </div>
         <!--Grid column-->
