--- a/src/app/shared/file-download-link/file-download-link.component.html
+++ b/src/app/shared/file-download-link/file-download-link.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="(bitstreamPath$| async)?.routerLink" class="dont-break-out"
+<a [routerLink]="(bitstreamPath$| async)?.routerLink" class="btn dont-break-out"
    [queryParams]="(bitstreamPath$| async)?.queryParams"
    [target]="isBlank ? '_blank': '_self'"
    [ngClass]="cssClasses"
