--- a/src/themes/dspace/styles/_theme_sass_variable_overrides.scss
+++ b/src/themes/dspace/styles/_theme_sass_variable_overrides.scss
@@ -50,9 +50,9 @@ $font-family-sans-serif: 'Raleway', -apple-system, BlinkMacSystemFont, "Segoe UI
 
 // Override semantic colors here
 $primary:   #ffffff;  // Gray
-$secondary: #495057;  // As Bootstrap $gray-700
+$secondary: #919191;  // As Bootstrap $gray-700
 $success:   #92c642;  // Lime
-$info:      #ffbf50;  // Light blue
+$info:      #bdecb680;  // Light blue
 $warning:   #ec9433;  // Orange
 $danger:    #cf4444;  // Red
 $light:     #f8f9fa;  // As Bootstrap $gray-100
@@ -71,7 +71,7 @@ $yiq-contrasted-threshold: 170;
 
 $body-color: #003B49;       // As Bootstrap $gray-800
 
-$link-color: #53852f;       // Blue green, as DSpace $info
+$link-color: #003b49;       // Blue green, as DSpace $info
 $link-decoration: none;
 $link-hover-color: #77bd43;
 $link-hover-decoration: underline;
