--- a/src/app/home-page/top-level-community-list/top-level-community-list.component.scss
+++ b/src/app/home-page/top-level-community-list/top-level-community-list.component.scss
@@ -8,3 +8,19 @@ p-carousel-item:hover {
   cursor: pointer;
   box-shadow: 0 0 4px 1px #e1e1e1;
 }
+
+.mb-4::before {
+  background-color: #77bd43;
+}
+.mb-4::before {
+  content: "";
+  width: 60px;
+  height: 5px;
+  position: absolute;
+  top: 30px;
+}
+
+a:hover {
+  background-color: #326670;
+  transition: 0.5ms;
+}
