Fix discovery bar styles

--- a/src/app/shared/search/search-filters/search-filter/search-text-filter/search-text-filter.component.scss
+++ b/src/app/shared/search/search-filters/search-filter/search-text-filter/search-text-filter.component.scss
@@ -4,6 +4,8 @@
         color: var(--bs-link-color);
         text-decoration: underline;
         cursor: pointer;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
 ::ng-deep em {
