--- a/src/app/shared/search/search-filters/search-filter/search-filter.component.scss
+++ b/src/app/shared/search/search-filters/search-filter/search-filter.component.scss
@@ -26,7 +26,9 @@
     background: transparent;
     width: 100%;
     outline: none !important;
-    border-bottom: 1pX solid rgba(119, 189, 66, 0.4);
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: #003b49;
   }
 
   &.focus {
