Fix general styles

--- a/src/styles/_custom_variables.scss
+++ b/src/styles/_custom_variables.scss
@@ -91,8 +91,8 @@
   --ds-notification-bg-info: #{darken(adjust-hue($info, -10), 10%)};
   --ds-notification-bg-warning: #{darken(adjust-hue($warning, -10), 10%)};
 
-  --ds-top-footer-bg: #336C6D;
-  --ds-footer-bg:  #336C6D;
+  --ds-top-footer-bg: #003B49;
+  --ds-footer-bg:  #003B49;
   --ds-footer-border: 1px solid var(--bs-gray-400);
   --ds-footer-padding: 0;
   --ds-footer-padding-bottom: 0;
