--- a/src/styles/_global-styles.scss
+++ b/src/styles/_global-styles.scss
@@ -545,5 +545,5 @@ ds-untyped-item,ds-publication{
     margin-bottom: 3pc;
 }
 ds-footer {
-    background-color: #336C6D;
+    background-color: var(--ds-footer-bg);
 }
