Add amount div to simple item page

--- a/src/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -210,6 +210,7 @@
       [fields]="['cimmyt.icc']"
       [label]="'cimmyt.icc'">
     </ds-generic-item-page-field>
+    <ds-item-page-amount-field [item]="object"></ds-item-page-amount-field>
     <ds-generic-item-page-field [item]="object"
       [fields]="['cimmyt.contractnumber']"
       [label]="'cimmyt.contractnumber'">
